--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
                 <p>그라피코스(GRAPHIKOS)는 국민대학교 시각디자인과의 18/19학번으로 이루어진 그래픽소모임입니다.<br>
                 <br>
-                한명이 한장씩 각각의 타로 카드 속 필수 요소를 포함하여 각자의 개성을 담아 카드를 완성했습니다. 타로카드에 대한 짤막한 설명을 추가했습니다. 설명과 함께 즐겁게 관람해주세요.<br>
+                한명이 한장씩 타로 카드 속 필수 요소를 포함하여 각자의 개성을 담아 카드를 완성했습니다. 타로카드에 대한 짤막한 설명을 추가했습니다. 설명과 함께 즐겁게 관람해주세요.<br>
                 <span style="color: #0C0017">참여해주신 친구들 정말 감사하고 수고하셨습니다 XD</span>
                 </p>
             </div>
