--- a/detail_20.html
+++ b/detail_20.html
@@ -57,119 +57,119 @@
                 <div class="card_box">
                     <h2 class="card_name">The Fool</h2>
                     <a href="detail_0.html">
-                        <img class="card_box_img" src="img/card/0_theFool.png">
+                        <img class="card_box_img" src="img/card/0_theFool.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Magician</h2>
                     <a href="detail_1.html">
-                        <img class="card_box_img" src="img/card/1_theMagician.png">
+                        <img class="card_box_img" src="img/card/1_theMagician.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The High Priestess</h2>
                     <a href="detail_2.html">
-                        <img class="card_box_img" src="img/card/2_theHighpriestess.png">
+                        <img class="card_box_img" src="img/card/2_theHighpriestess.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Empress</h2>
                     <a href="detail_3.html">
-                        <img class="card_box_img" src="img/card/3_theEmpress.png">
+                        <img class="card_box_img" src="img/card/3_theEmpress.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Emperor</h2>
-                    <a href="detail_4.html"><img class="card_box_img" src="img/card/4_theEmperor.png"></a>
+                    <a href="detail_4.html"><img class="card_box_img" src="img/card/4_theEmperor.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hierophant</h2>
-                    <a href="detail_5.html"><img class="card_box_img" src="img/card/5_theHierophant.png"></a>
+                    <a href="detail_5.html"><img class="card_box_img" src="img/card/5_theHierophant.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Lovers</h2>
-                    <a href="detail_6.html"><img class="card_box_img" src="img/card/6_theLovers.png"></a>
+                    <a href="detail_6.html"><img class="card_box_img" src="img/card/6_theLovers.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Chariot</h2>
-                    <a href="detail_7.html"><img class="card_box_img" src="img/card/7_theChriot.png"></a>
+                    <a href="detail_7.html"><img class="card_box_img" src="img/card/7_theChriot.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Strength</h2>
-                    <a href="detail_8.html"><img class="card_box_img" src="img/card/8_theStrength.png"></a>
+                    <a href="detail_8.html"><img class="card_box_img" src="img/card/8_theStrength.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hermit</h2>
-                    <a href="detail_9.html"><img class="card_box_img" src="img/card/9_theHermit.png"></a>
+                    <a href="detail_9.html"><img class="card_box_img" src="img/card/9_theHermit.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Wheel of Fortune</h2>
-                    <a href="detail_10.html"><img class="card_box_img" src="img/card/10_wheelofFortune.png"></a>
+                    <a href="detail_10.html"><img class="card_box_img" src="img/card/10_wheelofFortune.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Justice</h2>
-                    <a href="detail_11.html"><img class="card_box_img" src="img/card/11_justice.png"></a>
+                    <a href="detail_11.html"><img class="card_box_img" src="img/card/11_justice.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hanged Man</h2>
-                    <a href="detail_12.html"><img class="card_box_img" src="img/card/12_theFangedman.png"></a>
+                    <a href="detail_12.html"><img class="card_box_img" src="img/card/12_theFangedman.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Death</h2>
-                    <a href="detail_13.html"><img class="card_box_img" src="img/card/13_death.png"></a>
+                    <a href="detail_13.html"><img class="card_box_img" src="img/card/13_death.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Temperance</h2>
-                    <a href="detail_14.html"><img class="card_box_img" src="img/card/14_temperance.png"></a>
+                    <a href="detail_14.html"><img class="card_box_img" src="img/card/14_temperance.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Devil</h2>
-                    <a href="detail_15.html"><img class="card_box_img" src="img/card/15_theDevil.png"></a>
+                    <a href="detail_15.html"><img class="card_box_img" src="img/card/15_theDevil.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Tower</h2>
-                    <a href="detail_16.html"><img class="card_box_img" src="img/card/16_theTower.png"></a>
+                    <a href="detail_16.html"><img class="card_box_img" src="img/card/16_theTower.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Star</h2>
-                    <a href="detail_17.html"><img class="card_box_img" src="img/card/17_theStar.png"></a>
+                    <a href="detail_17.html"><img class="card_box_img" src="img/card/17_theStar.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Moon</h2>
-                    <a href="detail_18.html"><img class="card_box_img" src="img/card/18_theMoon.png"></a>
+                    <a href="detail_18.html"><img class="card_box_img" src="img/card/18_theMoon.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Sun</h2>
-                    <a href="detail_19.html"><img class="card_box_img" src="img/card/19_theSun.png"></a>
+                    <a href="detail_19.html"><img class="card_box_img" src="img/card/19_theSun.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Judgement</h2>
-                    <a href="detail_20.html"><img class="card_box_img" src="img/card/20_judgement.png"></a>
+                    <a href="detail_20.html"><img class="card_box_img" src="img/card/20_judgement.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The World</h2>
-                    <a href="detail_21.html"><img class="card_box_img" src="img/card/21_theWorld.png"></a>
+                    <a href="detail_21.html"><img class="card_box_img" src="img/card/21_theWorld.jpg"></a>
                 </div>
 
 
