--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h2>0</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_0.html"><img class="card_img" src="img/card/0_theFool.png"></a>
+                        <a href="detail_0.html"><img class="card_img" src="img/card/0_theFool.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Fool / 바보 <br><span style="font-size: 16px; line-height: 36px;">Design by 학영</span></h3>
@@ -101,7 +101,7 @@
                         <h2>I</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_1.html"><img class="card_img" src="img/card/1_theMagician.png"></a>
+                        <a href="detail_1.html"><img class="card_img" src="img/card/1_theMagician.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Magician / 마법사 <br><span style="font-size: 16px; line-height: 36px;">Design by 세원</span></h3>
@@ -114,7 +114,7 @@
                         <h2>II</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_2.html"><img class="card_img" src="img/card/2_theHighpriestess.png"></a>
+                        <a href="detail_2.html"><img class="card_img" src="img/card/2_theHighpriestess.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The High Priestess / 고위 여사제 <br><span style="font-size: 16px; line-height: 36px;">Design by 예지</span></h3>
@@ -127,7 +127,7 @@
                         <h2>III</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_3.html"><img class="card_img" src="img/card/3_theEmpress.png"></a>
+                        <a href="detail_3.html"><img class="card_img" src="img/card/3_theEmpress.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Empress / 여황제 <br><span style="font-size: 16px; line-height: 36px;">Design by 세라</span></h3>
@@ -139,7 +139,7 @@
                         <h2>IV</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_4.html"><img class="card_img" src="img/card/4_theEmperor.png"></a>
+                        <a href="detail_4.html"><img class="card_img" src="img/card/4_theEmperor.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Emperor / 황제 <br><span style="font-size: 16px; line-height: 36px;">Design by 가흔</span></h3>
@@ -151,7 +151,7 @@
                         <h2>V</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_5.html"><img class="card_img" src="img/card/5_theHierophant.png"></a>
+                        <a href="detail_5.html"><img class="card_img" src="img/card/5_theHierophant.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Hierophant / 교황<br><span style="font-size: 16px; line-height: 36px;">Design by 소빈</span></h3>
@@ -163,7 +163,7 @@
                         <h2>VI</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_6.html"><img class="card_img" src="img/card/6_theLovers.png"></a>
+                        <a href="detail_6.html"><img class="card_img" src="img/card/6_theLovers.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Lovers / 연인<br><span style="font-size: 16px; line-height: 36px;">Design by 현지</span></h3>
@@ -175,7 +175,7 @@
                         <h2>VII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_7.html"><img class="card_img" src="img/card/7_theChriot.png"></a>
+                        <a href="detail_7.html"><img class="card_img" src="img/card/7_theChriot.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Chariot / 전차<br><span style="font-size: 16px; line-height: 36px;">Design by 세연</span></h3>
@@ -187,7 +187,7 @@
                         <h2>VIII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_8.html"><img class="card_img" src="img/card/8_theStrength.png"></a>
+                        <a href="detail_8.html"><img class="card_img" src="img/card/8_theStrength.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Strength / 힘<br><span style="font-size: 16px; line-height: 36px;">Design by 준서</span></h3>
@@ -199,7 +199,7 @@
                         <h2>IX</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_9.html"><img class="card_img" src="img/card/9_theHermit.png"></a>
+                        <a href="detail_9.html"><img class="card_img" src="img/card/9_theHermit.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Hermit / 은둔자<br><span style="font-size: 16px; line-height: 36px;">Design by 창하</span></h3>
@@ -211,7 +211,7 @@
                         <h2>X</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_10.html"><img class="card_img" src="img/card/10_wheelofFortune.png"></a>
+                        <a href="detail_10.html"><img class="card_img" src="img/card/10_wheelofFortune.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Wheel of Fortune / 운명의 수레바퀴<br><span style="font-size: 16px; line-height: 36px;">Design by 다원</span></h3>
@@ -223,7 +223,7 @@
                         <h2>XI</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_11.html"><img class="card_img" src="img/card/11_justice.png"></a>
+                        <a href="detail_11.html"><img class="card_img" src="img/card/11_justice.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Justice / 정의<br><span style="font-size: 16px; line-height: 36px;">Design by 우근</span></h3>
@@ -235,7 +235,7 @@
                         <h2>XII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_12.html"><img class="card_img" src="img/card/12_theFangedman.png"></a>
+                        <a href="detail_12.html"><img class="card_img" src="img/card/12_theFangedman.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Hanged Man / 매달린 자<br><span style="font-size: 16px; line-height: 36px;">Design by 세정</span></h3>
@@ -247,7 +247,7 @@
                         <h2>XIII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_13.html"><img class="card_img" src="img/card/13_death.png"></a>
+                        <a href="detail_13.html"><img class="card_img" src="img/card/13_death.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Death / 죽음<br><span style="font-size: 16px; line-height: 36px;">Design by 채원</span></h3>
@@ -259,7 +259,7 @@
                         <h2>XIV</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_14.html"><img class="card_img" src="img/card/14_temperance.png"></a>
+                        <a href="detail_14.html"><img class="card_img" src="img/card/14_temperance.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Temperance / 절제<br><span style="font-size: 16px; line-height: 36px;">Design by 현수</span></h3>
@@ -271,7 +271,7 @@
                         <h2>XV</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_15.html"><img class="card_img" src="img/card/15_theDevil.png"></a>
+                        <a href="detail_15.html"><img class="card_img" src="img/card/15_theDevil.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Devil / 악마<br><span style="font-size: 16px; line-height: 36px;">Design by 지현</span></h3>
@@ -283,7 +283,7 @@
                         <h2>XVI</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_16.html"><img class="card_img" src="img/card/16_theTower.png"></a>
+                        <a href="detail_16.html"><img class="card_img" src="img/card/16_theTower.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Tower / 탑<br><span style="font-size: 16px; line-height: 36px;">Design by 수진</span></h3>
@@ -295,7 +295,7 @@
                         <h2>XVII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_17.html"><img class="card_img" src="img/card/17_theStar.png"></a>
+                        <a href="detail_17.html"><img class="card_img" src="img/card/17_theStar.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Star / 별<br><span style="font-size: 16px; line-height: 36px;">Design by 경아</span></h3>
@@ -307,7 +307,7 @@
                         <h2>XVIII</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_18.html"><img class="card_img" src="img/card/18_theMoon.png"></a>
+                        <a href="detail_18.html"><img class="card_img" src="img/card/18_theMoon.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Moon / 달<br><span style="font-size: 16px; line-height: 36px;">Design by 경빈</span></h3>
@@ -319,7 +319,7 @@
                         <h2>XIX</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_19.html"><img class="card_img" src="img/card/19_theSun.png"></a>
+                        <a href="detail_19.html"><img class="card_img" src="img/card/19_theSun.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The Sun / 태양<br><span style="font-size: 16px; line-height: 36px;">Design by 예나</span></h3>
@@ -331,7 +331,7 @@
                         <h2>XX</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_20.html"><img class="card_img" src="img/card/20_judgement.png"></a>
+                        <a href="detail_20.html"><img class="card_img" src="img/card/20_judgement.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>Judgement / 심판<br><span style="font-size: 16px; line-height: 36px;">Design by 민주</span></h3>
@@ -343,7 +343,7 @@
                         <h2>XXI</h2>
                     </div>
                     <div class="imgBx">
-                        <a href="detail_21.html"><img class="card_img" src="img/card/21_theWorld.png"></a>
+                        <a href="detail_21.html"><img class="card_img" src="img/card/21_theWorld.jpg"></a>
                     </div>
                     <div class="details">
                         <h3>The World / 세계<br><span style="font-size: 16px; line-height: 36px;">Design by 소현</span></h3>
@@ -358,119 +358,119 @@
                 <div class="card_box">
                     <h2 class="card_name">The Fool</h2>
                     <a href="detail_0.html">
-                        <img class="card_box_img" src="img/card/0_theFool.png">
+                        <img class="card_box_img" src="img/card/0_theFool.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Magician</h2>
                     <a href="detail_1.html">
-                        <img class="card_box_img" src="img/card/1_theMagician.png">
+                        <img class="card_box_img" src="img/card/1_theMagician.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The High Priestess</h2>
                     <a href="detail_2.html">
-                        <img class="card_box_img" src="img/card/2_theHighpriestess.png">
+                        <img class="card_box_img" src="img/card/2_theHighpriestess.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Empress</h2>
                     <a href="detail_3.html">
-                        <img class="card_box_img" src="img/card/3_theEmpress.png">
+                        <img class="card_box_img" src="img/card/3_theEmpress.jpg">
                     </a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Emperor</h2>
-                    <a href="detail_4.html"><img class="card_box_img" src="img/card/4_theEmperor.png"></a>
+                    <a href="detail_4.html"><img class="card_box_img" src="img/card/4_theEmperor.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hierophant</h2>
-                    <a href="detail_5.html"><img class="card_box_img" src="img/card/5_theHierophant.png"></a>
+                    <a href="detail_5.html"><img class="card_box_img" src="img/card/5_theHierophant.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Lovers</h2>
-                    <a href="detail_6.html"><img class="card_box_img" src="img/card/6_theLovers.png"></a>
+                    <a href="detail_6.html"><img class="card_box_img" src="img/card/6_theLovers.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Chariot</h2>
-                    <a href="detail_7.html"><img class="card_box_img" src="img/card/7_theChriot.png"></a>
+                    <a href="detail_7.html"><img class="card_box_img" src="img/card/7_theChriot.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Strength</h2>
-                    <a href="detail_8.html"><img class="card_box_img" src="img/card/8_theStrength.png"></a>
+                    <a href="detail_8.html"><img class="card_box_img" src="img/card/8_theStrength.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hermit</h2>
-                    <a href="detail_9.html"><img class="card_box_img" src="img/card/9_theHermit.png"></a>
+                    <a href="detail_9.html"><img class="card_box_img" src="img/card/9_theHermit.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Wheel of Fortune</h2>
-                    <a href="detail_10.html"><img class="card_box_img" src="img/card/10_wheelofFortune.png"></a>
+                    <a href="detail_10.html"><img class="card_box_img" src="img/card/10_wheelofFortune.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Justice</h2>
-                    <a href="detail_11.html"><img class="card_box_img" src="img/card/11_justice.png"></a>
+                    <a href="detail_11.html"><img class="card_box_img" src="img/card/11_justice.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Hanged Man</h2>
-                    <a href="detail_12.html"><img class="card_box_img" src="img/card/12_theFangedman.png"></a>
+                    <a href="detail_12.html"><img class="card_box_img" src="img/card/12_theFangedman.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Death</h2>
-                    <a href="detail_13.html"><img class="card_box_img" src="img/card/13_death.png"></a>
+                    <a href="detail_13.html"><img class="card_box_img" src="img/card/13_death.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Temperance</h2>
-                    <a href="detail_14.html"><img class="card_box_img" src="img/card/14_temperance.png"></a>
+                    <a href="detail_14.html"><img class="card_box_img" src="img/card/14_temperance.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Devil</h2>
-                    <a href="detail_15.html"><img class="card_box_img" src="img/card/15_theDevil.png"></a>
+                    <a href="detail_15.html"><img class="card_box_img" src="img/card/15_theDevil.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Tower</h2>
-                    <a href="detail_16.html"><img class="card_box_img" src="img/card/16_theTower.png"></a>
+                    <a href="detail_16.html"><img class="card_box_img" src="img/card/16_theTower.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Star</h2>
-                    <a href="detail_17.html"><img class="card_box_img" src="img/card/17_theStar.png"></a>
+                    <a href="detail_17.html"><img class="card_box_img" src="img/card/17_theStar.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Moon</h2>
-                    <a href="detail_18.html"><img class="card_box_img" src="img/card/18_theMoon.png"></a>
+                    <a href="detail_18.html"><img class="card_box_img" src="img/card/18_theMoon.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The Sun</h2>
-                    <a href="detail_19.html"><img class="card_box_img" src="img/card/19_theSun.png"></a>
+                    <a href="detail_19.html"><img class="card_box_img" src="img/card/19_theSun.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">Judgement</h2>
-                    <a href="detail_20.html"><img class="card_box_img" src="img/card/20_judgement.png"></a>
+                    <a href="detail_20.html"><img class="card_box_img" src="img/card/20_judgement.jpg"></a>
                 </div>
 
                 <div class="card_box">
                     <h2 class="card_name">The World</h2>
-                    <a href="detail_21.html"><img class="card_box_img" src="img/card/21_theWorld.png"></a>
+                    <a href="detail_21.html"><img class="card_box_img" src="img/card/21_theWorld.jpg"></a>
                 </div>
 
 
