--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        
+        <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/detailphone.css" />
 
         
     </head>
