--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="swiper-container">
-            <h4 class="drag">* 옆으로 밀어 카드 전환이 가능합니다.</h4>
+            <h4 class="drag">* 옆으로 밀어 카드 전환이 가능합니다. <br> 이미지 클릭시 세부페이지로 이동이 가능합니다.</h4>
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide">
